crates/test-files/fixtures/compile_errors/circular_dependency_create.fe
contract Foo {
    pub fn bar(ctx: Context) -> address {
        let foo: Foo = ctx.create<Foo>(args: (), value: 0)
        return address(foo)
    }
}
